# dts-build

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.py
docs/: dts-file-source-code-68575.md  plan.md  todo.md
dtsbuild/: __init__.py  agent_parser.py  askme.py  bootstrap_tables.py  cli.py  discovery.py  generator.py  inspector.py  manifest.py  pcie_utils.py  reference_dts.py  scaffold.py  schema.py  schema_io.py  session.py  spec.py  sufficiency.py  tables.py
dtsbuild/agents/: __init__.py  auditor.py  calibration.py  calibration_triage.py  calibration_workflow.py  compiler.py  indexer.py  issue_register.py  orchestrator.py  prompts.py  refdiff.py  resolver.py  validation.py
dtsbuild/agents/tools/: __init__.py  compiler_tools.py  indexing.py  schema_ops.py  tracing.py
dtsbuild/rules/: __init__.py  base.py  buttons.py  ethernet.py  i2c.py  led.py  memory.py  pcie.py  pinctrl.py  power.py  registry.py  serdes.py  uart.py  usb.py
dtsin_template/: manifest.yaml
samples/dtsin_demo/: manifest.yaml
skills/gen-dts/: SKILL.md
skills/schematic-reasoner/: SKILL.md
tests/: test_agent_parser.py  test_agent_tools.py  test_askme.py  test_auditor.py  test_bootstrap_tables.py  test_calibration.py  test_calibration_triage.py  test_calibration_workflow.py  test_compiler.py  test_discovery.py  test_generate.py  test_gpio_normalization.py  test_issue_register.py  test_orchestrator.py  test_refdiff.py  test_resolver.py  test_rules.py  test_scaffold.py  test_schema.py  test_session.py  test_sufficiency.py  test_validation.py
(+7 files in other folders)
